2005-09-26  Sebastian Pop  <pop@cri.ensmp.fr>

	PR tree-optimization/23942
	* Makefile.in (SCEV_H): Depends on PARAMS_H.
	* tree-scalar-evolution.c: Include params.h.
	(t_bool): New enum.
	(follow_ssa_edge, follow_ssa_edge_in_rhs,
	follow_ssa_edge_in_condition_phi_branch,
	follow_ssa_edge_in_condition_phi, follow_ssa_edge_inner_loop_phi): 
	Change return type to t_bool.  Use a parameter to limit the size of
	trees that are walked before stopping 
	(analyze_evolution_in_loop): Initialize the limit to 0.
	(follow_ssa_edge): Give up by returning t_dont_know if the limit 
	exceeds PARAM_SCEV_MAX_EXPR_SIZE.

2005-09-26  Uros Bizjak  <uros@kss-loka.si>

	PR middle-end/23831
	* simplify-rtx.c (simplify_immed_subreg) [MODE_INT]: Skip
	simplification if elem_bitsize > 2 * HOST_BITS_PER_WIDE_INT.

2005-09-26    Fariborz Jahanian <fjahanian@apple.com>

        * combine.c (make_extraction): Check for valid use of subreg.

2005-09-26  Uros Bizjak  <uros@kss-loka.si>

	PR target/24055
	* config/i386/i386.md ("*fistdi2_1"): New pattern.
	("*fist<mode>2_1"): Use only HImode and SImode register operands.
	("fist<mode>2_with_temp"): Use only register operands.

2005-09-26  J"orn Rennecke <joern.rennecke@st.com>

	* rtlanal.c (reg_used_between_p): Don't check for CLOBBERs in
	CALL_INSN_FUNCTION_USAGE.

2005-09-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/15855
	* gcse.c: Include hashtab.h, define ldst entry hashtable.
	(pre_ldst_expr_hash, pre_ldst_expr_eq): New functions.
	(ldst_entry): Use the hashtable instead of list-walking.
	(find_rtx_in_ldst): Likewise.
	(free_ldst_entry): Free the hashtable.
	(compute_ld_motion_mems): Create the hashtable.
	(trim_ld_motion_mems): Remove entry from hashtable if
	removing it from list.
	(compute_store_table): Likewise^2.
	(store_motion): Free hashtable in case we did not see
	any stores.

2005-09-25  Kazu Hirata  <kazu@codesourcery.com>

	* fold-const.c (fold_binary): Use op0 and op1 instead of arg0