@@ -1,3 +1,9 @@
+2005-09-23  Fariborz Jahanian <fjahanian@apple.com>
+
+	PR target/23847
+        * config/rs6000/rs6000.c (rs6000_function_value): Parallel pattern
+        for __complex__ double in -mcpu=G5 mode.
+
 2005-09-26  Sebastian Pop  <pop@cri.ensmp.fr>
 
 	PR tree-optimization/23942
